// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaintenanceTakeover Renders correct content when both start date and end date are provided 1`] = `
Array [
  "There will be scheduled site maintenance from ",
  <strong
    key="strong-1"
  >
    June 15, 2021, 3:00 PM EDT
  </strong>,
  " to ",
  <strong
    key="strong-3"
  >
    June 17, 2021, 10:00 AM EDT
  </strong>,
  ". All or parts of the site will be unavailable during this time.",
]
`;

exports[`MaintenanceTakeover Renders correct content when only end date is provided 1`] = `
Array [
  "The site is currently undergoing maintenance and will be completed by ",
  <strong
    key="strong-1"
  >
    June 17, 2021, 10:00 AM EDT
  </strong>,
  ". All or parts of the site will be temporarily unavailable.",
]
`;

exports[`MaintenanceTakeover Renders correct content when only start date is provided 1`] = `
Array [
  "There will be scheduled site maintenance beginning at ",
  <strong
    key="strong-1"
  >
    June 15, 2021, 3:00 PM EDT
  </strong>,
  ". All or parts of the site will be temporarily unavailable.",
]
`;

exports[`MaintenanceTakeover Renders correct content when start date and end date are not provided 1`] = `"The site is currently undergoing maintenance. All or parts of the site will be temporarily unavailable"`;
